<resources>
    <string name="app_name">Pun Intended</string>
    <string name="title">Pun Intended</string>
    <string name="subtitle">Random Jokes. Instant Laughs.</string>
    <string name="category">Category</string>
    <string name="setup">Setup</string>
    <string name="punchline">Punchline</string>
    <string name="category_value">General</string>
    <string name="setup_placeholder">Tap the button below to fetch a random joke.</string>
    <string name="punchline_placeholder">The punchline will appear here!</string>
    <string name="loading">Loading</string>
    <string name="button_copy_joke">Copy Joke</string>
    <string name="button_share_joke">Share Joke</string>
    <string name="button_new_joke">Get New Joke</string>
</resources>